--- a/chat.html
+++ b/chat.html
@@ -49,10 +49,12 @@
         <h1>Seja Bem vindo
             <span style="display: inline;" id="userName"></span>
         </h1>
-        <p>Entre com sua dúvida que nós vamos ajudar você</p>
+        <p>Entre com sua dúvida que nós vamos ajudar você!</p>
         <textarea id="question"
-            class="form-control" style="height: 200px;"></textarea>
-        <button class="btn btn-success" id="sendChat">Enviar</button>
+            class="form-control" style="height: 200px; margin: 2em 0;"></textarea>
+        <button class="btn btn-success" id="sendChat" style="margin-bottom: 2em;">
+            Enviar
+        </button>
 
         <ul id="displayQuestions"></ul>
     </main>
