--- a/chat.html
+++ b/chat.html
@@ -50,7 +50,7 @@
             <span style="display: inline;" id="userName"></span>
         </h1>
         <p style="border-bottom: 1px solid black;">
-            Entre com sua dúvida que nós vamos ajudar você!
+            Entre com sua dúvida que nós vamos ajudar você
         </p>
 
         <ul id="displayQuestions" style="padding: 0 !important;"></ul>
