--- a/chat.html
+++ b/chat.html
@@ -45,7 +45,7 @@
     <div>
         <img src="img/banner1.jpg" alt="" style="width: 100%;">
     </div>
-    <main class="container-fluid content" style="clear: both;">
+    <main class="chat container-fluid content" style="clear: both;">
         <h1>Seja Bem vindo
             <span style="display: inline;" id="userName"></span>
         </h1>
