--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
         </div>
         <div class="menu" style="padding-top: 4em;">
             <ul>
-                <li>Conheça-nos</li>
+                <li><a href="#" id="knowus" style="color:black;">Conheça-nos</a></li>
                 <li>|</li>
-                <li>Cadastre-se</li>
+                <li><a href="#" id="signup" style="color:black;">Cadastre-se</a></li>
                 <li>|</li>
-                <li>Chat Online</li>
+                <li style="color:black;">Chat Online</li>
                 <li>|</li>
-                <li>Suporte</li>
+                <li style="color:black;">Suporte</li>
             </ul>
         </div>
     </header>
